Prevent Linux Chromium browsers from displaying an unscrollable horizontal scrollbar for all code samples

--- a/jekyll-assets/css/style.css
+++ b/jekyll-assets/css/style.css
@@ -827,7 +827,6 @@ h6 .anchor::before {
   margin-bottom: 15px;
   position: relative;
   width: 99%;
-  overflow-x: scroll;
 }
 
 #content div.admonitionblock div.listingblock {
